--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         'use strict';
 
-        const img = ["./img/nas_1.jpg", "./img/nas_2.jpg", "./img/nas_3.jpg", "./img/nas_4.jpg", "./img/nas_5.jpg", "./img/nas_6.jpg", "./img/nas_7.jpg", "./img/nas_8.jpg", "./img/nas_9.jpg", "./img/nas_10.jpg", "./img/nas_11.jpg"];
+        const img = ["./img/nas_1.jpg", "./img/nas_2.jpg", "./img/nas_3.jpg", "./img/nas_4.jpg", "./img/nas_5.jpg", "./img/nas_6.jpg", "./img/nas_7.jpg", "./img/nas_8.jpg", "./img/nas_9.jpg", "./img/nas_10.jpg", "./img/nas_11.jpg", "./img/nas_12.jpg"];
 
         let count = -1;
         let repeat;
